--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 48px 32px;
-    background-color: #1F2937;
+    background-color: red;
     font-family: "Karla", sans-serif;
     font-optical-sizing: auto;
     font-weight: normal;
